# app/Models/User.php
@@ -7,6 +7,31 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Passport\HasApiTokens;
+
+/**
+ * @OA\Schema(
+ *   schema="User",
+ *   type="object",
+ *   @OA\Property(
+ *       property="name",
+ *       type="string",
+ *       required={"true"},
+ *       description="The user name"
+ *   ),
+ *   @OA\Property(
+ *       property="email",
+ *       required={"true"},
+ *       type="string",
+ *       description="The Users email"
+ *   ),
+ *   @OA\Property(
+ *       property="password",
+ *       type="string",
+ *       required={"true"},
+ *       description="The Users password"
+ *   ),
+ * )
+ */
 class User extends Authenticatable
 {
     use HasFactory, Notifiable, HasApiTokens;
